# baml-rest

./: .coderabbit.yaml  .embedignore  .gitignore  Dockerfile.builder  NOTICE  README.md  RELEASE.md  adapter.go  embed.go  go.mod  go.sum  go.work  go.work.sum  introspected.go  nativeprompt_static_unrouted_test.go  nativestream_unrouted_test.go  renovate.json
baml/: interfaces.go  types.go  versions.go
bamlutils/: adapters.go  debaml_config_test.go  decode_static_final.go  dynamic.go  dynamic_absent.go  dynamic_absent_test.go  dynamic_benchmark_test.go  dynamic_order.go  dynamic_order_test.go  dynamic_render_order.go  dynamic_render_order_test.go  dynamic_test.go  embed.go  go.mod  go.sum  interfaces.go  interfaces_test.go  legacy_outcome.go  legacy_outcome_test.go  media.go  metadata_test.go  native_serve.go  native_shadow.go  native_static_serve.go  native_stream.go  orderedmap.go  orderedmap_test.go  pool.go  versions.go  versions_test.go
dynclient/: client.go  client_test.go  go.mod  go.sum  options.go  stream.go  types.go
integration/: baml_versions.json  bamlfuzz_callwithraw_test.go  bamlfuzz_dynamic_test.go  bamlfuzz_invalid_test.go  bamlfuzz_invalid_union_test.go  bamlfuzz_parse_recovery_test.go  bamlfuzz_reasoning_test.go  bamlfuzz_recover_test.go  bamlfuzz_static_test.go  bamlfuzz_streaming_clean_final_test.go  bamlfuzz_streaming_test.go  bridge_test.go  buildmode_inprocess_test.go  buildmode_subprocess_test.go  (+43 more)
internal/debaml/bamlunicode/testdata/reference/: Cargo.toml  rust-toolchain.toml
internal/debaml/bamlunicode/testdata/reference/src/: main.rs
(+1221 files in other folders)
